Implement tests for UserController.java